# vm_manager

./: .cqfdrc  .flake8  .gitignore  .gitreview  CLAUDE.md  MANIFEST.in  README.md  pylintrc  pyproject.toml  setup.py  sonar-project.properties  vm_manager.py  vm_manager_cmd.py
.cqfd/docker/: Dockerfile  python-sonar.sh
.github/workflows/: ci.yml
docs/: api.rst  cli.rst  conf.py  index.rst  overview.rst
rbd_helper/: rbd.py
tests/: conftest.py  test_libvirt_manager.py  test_vm_manager_cluster.py  test_vm_manager_libvirt.py
vm_manager/: __init__.py  exceptions.py  vm_manager.py  vm_manager_api.py  vm_manager_cluster.py  vm_manager_cmd.py  vm_manager_libvirt.py  xml_utils.py
vm_manager/helpers/: __init__.py  libvirt.py  libvirt_cmd.py  pacemaker.py  rbd_manager.py
vm_manager/helpers/tests/pacemaker/: add_vm.py  remove_vm.py  start_vm.py  stop_vm.py
vm_manager/helpers/tests/rbd_manager/: clone_rbd.py  create_rbd_group.py  create_rbd_namespace.py  metadata_rbd.py  purge_rbd.py  rollback_rbd.py  write_rbd.py
vm_manager/testdata/: vm.xml  wrong_vm_config.xml
